add uaid to animals and add filter (uaid, tag_number) to get animals
